# waywallen-display

./: .gitignore  BUILD.md  CMakeLists.txt  Cargo.toml  README.CN.md  README.md  build.rs  glibc-2.17.h  release.xml
.github/workflows/: package-release.yml  release-kde-zip.yml
examples/: minimal_egl.c  minimal_headless.c
examples/qml/: minimal.qml  multi_display.qml  with_controls.qml
extensions/gnome/: CMakeLists.txt
extensions/gnome/extension/: extension.js  gnomeShellOverride.js  launcher.js  metadata.json.in  pointerForwarder.js  prefs.js  wallpaper.js
extensions/gnome/extension/schemas/: org.gnome.shell.extensions.waywallen.gschema.xml  org.waywallen.gnome.gschema.xml
extensions/gnome/renderer/: renderer.js
extensions/kde/: CMakeLists.txt  LICENSE  Messages.sh  README.md
extensions/kde/package/: metadata.json
extensions/kde/package/contents/config/: main.xml
extensions/kde/package/contents/ui/: ImportTest.qml  ImportTestEmbed.qml  WaywallenSurface.qml  WaywallenSurfaceEmbed.qml  config.qml  main.qml
include/: waywallen_display.h
plugins/gobject/: CMakeLists.txt  ww-display.c  ww-display.h  ww-shadow-paintable.c  ww-shadow-paintable.h
plugins/qml/: CMakeLists.txt  PluginInfo.hpp  VkBlitter.cpp  VkBlitter.hpp  WaywallenDisplay.cpp  WaywallenDisplay.hpp
src/: backend_egl.c  backend_egl.h  backend_vulkan.c  backend_vulkan.h  backend_vulkan_blit.c  backend_vulkan_blit.h  codec.c  codec.h  display.c  drm_fourcc_internal.h  lib.rs  log_internal.h
tests/: test_backend_egl.c  test_codec.c  test_display.c
